--- a/about.html
+++ b/about.html
@@ -202,24 +202,24 @@
 
 
 
-					<div class="item">
+					<!-- <div class="item">
 						<div class="desktop-3 tablet-6 columns">
 							<p></p>
 
-						</div><!-- // .desktop-3 -->
+						</div>
 
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Prizes</h4>
 							<p>
 								2017 - <a id=show href="http://lumenprize.com/artwork/latent-space"> Lumen Prize Student Prize Nominee</a> <br>
 								2017 - Slade School of Art Julian Sullivan Prize for outstanding achievement in Media Art <br>
-								<!-- 2012 - Awarded Top UK Result in Fine Art (Cambridge International Examinations)<br> -->
+								2012 - Awarded Top UK Result in Fine Art (Cambridge International Examinations)<br>
 
 						</p>
-						</div><!-- // .desktop-6 -->
+						</div>
 
 						<div class="clear"></div>
-					</div><!-- // .item -->
+					</div>-->
 
 
 					<div class="item">
