--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -80,8 +80,8 @@
 					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
-							<h3 class="border-top">Closed Loop.</h3>
-							<p class="project-desc">Neural Networks - 2017
+							<h3 class="border-top">Closed Loop</h3>
+							<p class="project-desc">2017, 2-channel digital video, 200 minute loop
 </p>
 
 							<p>Two artificial intelligence models have an active conversation reacting to each other in a constant feedback loop - one communicating with images, the other with words.
@@ -129,10 +129,12 @@ Two datasets to train the A.I. models (unsupervised):<br>
 					$(resizeDivs);
 					$(window).resize(resizeDivs);
 				</script>
+				<small>Single channel rendering of two channel video installation</small>
 
 				<br></br>
 				<!-- <img src="images/project-closedLoop/1_granary_jake_elwes__043.jpg" alt="Jake Elwes digital artist" /> -->
 				<img src="images/project-closedLoop/IMG_0853.jpg" alt="Jake Elwes digital artist" />
+				<small>Installation shot of Closed Loop shown as two back projected screens, Slade Degree Show 2017</small
 				<img src="images/project-closedLoop/IMG_0852.jpg" alt="Jake Elwes digital artist" />
 				<!-- <img src="images/project-closedLoop/IMG_0702.jpg" alt="Jake Elwes digital artist" /> -->
 
