--- a/index.html
+++ b/index.html
@@ -158,7 +158,19 @@
 						<img src="images/project-latentSpace.jpg" alt="" />
 
 						<h3>Latent Space</h3>
-						<!-- <span class="category">Video &amp; Neural Network - 2017</span> -->
+						<span class="category">2017</span>
+					</div><!-- // .item -->
+				</div><!-- // .desktop-4 -->
+			</a>
+
+
+			<a href="project-closedLoop.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-closedLoop.jpg" alt="" />
+
+						<h3>Closed Loop</h3>
+						<span class="category">2017</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
@@ -169,18 +181,7 @@
 						<img src="images/project-DaDaTa.jpg" alt="" />
 
 						<h3>DaDaDa Ta</h3>
-						<!-- <span class="category">Video &amp; AI Code - 2016</span> -->
-					</div><!-- // .item -->
-				</div><!-- // .desktop-4 -->
-			</a>
-
-			<a href="project-closedLoop.html" class="permalink">
-				<div class="desktop-4 tablet-6 columns">
-					<div class="item">
-						<img src="images/project-closedLoop.jpg" alt="" />
-
-						<h3>Closed Loop.</h3>
-						<!-- <span class="category">Neural Networks - 2017</span> -->
+						<span class="category">2016</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
@@ -196,7 +197,7 @@
 						<img src="images/project-digitalWhisper.jpg" alt="" />
 
 						<h3>Digital Whispers</h3>
-						<!-- <span class="category">Sound &amp; Twitter API - 2016</span> -->
+						<span class="category">2016</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
@@ -208,7 +209,7 @@
 						<img src="images/project-AutoEncodedBuddha.jpg" alt="" />
 
 						<h3>Auto-Encoded Buddha</h3>
-						<!-- <span class="category">Video &amp; AI Code (collaboration) - 2016</span> -->
+						<span class="category">2016</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
@@ -219,7 +220,7 @@
 						<img src="images/project-MLPorn.jpg" alt="" />
 
 						<h3>Machine Learning Porn</h3>
-						<!-- <span class="category">Video &amp; Neural Network - 2016</span> -->
+						<span class="category">2016</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
@@ -235,7 +236,7 @@
 						<img src="images/project-digitalTouch.jpg" alt="" />
 
 						<h3>Digital Caress</h3>
-						<!-- <span class="category">Photographic Prints - 2015</span> -->
+						<span class="category">2015</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
@@ -247,7 +248,7 @@
 						<img src="images/project-circuit.jpg" alt="" />
 
 						<h3>Solid State</h3>
-						<!-- <span class="category">Relief Prints - 2015</span> -->
+						<span class="category">2015</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
@@ -258,7 +259,7 @@
 				<img src="images/project-iPhoneTouch.jpg" alt="" />
 
 				<h3>Behind The Screen</h3>
-				<!-- <span class="category">iPhone App - 2015</span> -->
+				<span class="category">2015</span>
 			</div><!-- // .item -->
 		</div><!-- // .desktop-4 -->
 	</a>
@@ -274,7 +275,7 @@
 						<img src="images/project-pornCircles.jpg" alt="" />
 
 						<h3>Porn Saturation</h3>
-						<!-- <span class="category">iPhone &amp; Desktop App - 2015</span> -->
+						<span class="category">2015</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
@@ -286,7 +287,7 @@
 						<img src="images/project-lineForWalk.jpg" alt="" />
 
 						<h3>Taking a Phone for a Walk</h3>
-						<!-- <span class="category">iPhone App - 2015</span> -->
+						<span class="category">2015</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
