--- a/project-AutoEncodedBuddha.html
+++ b/project-AutoEncodedBuddha.html
@@ -81,7 +81,8 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Auto-Encoded Buddha</h3>
-							<p class="project-desc">Video &amp; AI Code (collaboration) - Berlin 2016</p>
+							<p class="project-desc">2016, mixed media (monitor, computer running customised A.I. software, wooden Buddha)
+</p>
 
 							<p>
 								Hommage to Nam June Paik’s TV Buddha
