--- a/about.html
+++ b/about.html
@@ -137,11 +137,9 @@
 
 
 			<div class="desktop-12 tablet-12 columns">
-				<p class="page-desc">Jake Elwes explores both Fine Art and Digital Code, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence. </p>
-				<blockquote>
-					<footer>Jake is currently currently working with <a id=show href="https://www.theartistsdevelopmentagency.org">the Artist Development Agency</a>.
-</footer>
-				</blockquote>
+				<p class="page-desc">Jake Elwes explores both Fine Art and Digital Code, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence. <br>
+					Jake is currently currently working with <a id=show href="https://www.theartistsdevelopmentagency.org">The Artist Development Agency</a>.</p>
+
 			</div>
 		</div><!-- // .container -->
 
