added soc med and lose materials

--- a/news.html
+++ b/news.html
@@ -137,7 +137,7 @@
 
 
 
-				<div class="desktop-12 tablet-12 columns">
+				<div class="desktop-8 tablet-6 columns">
 					<div class="box-content">
 
             <!-- <blockquote>
@@ -163,7 +163,7 @@ For the first time the national touring exhibition will launch at BALTIC Centre 
 							<footer>September 2017</footer>
 						</blockquote>
 
-						<p> <a id=show href="https://www.aec.at/festival/en/"> Ars Electronica</a>'s theme for 2017 in Artificial Intelligence has invite Elwes to show three new pieces, <a id=show href="project-latentSpace.html">Latent Space</a>, <a id=show href="project-closedLoop.html">Closed Loop</a> and <a id=show href="project-MLPorn.html">Machine Learning Porn</a> at this years Ars Electronica Fetival in Linz, Austria.
+						<p> <a id=show href="https://www.aec.at/festival/en/"> Ars Electronica</a>'s theme for 2017 in Artificial Intelligence has invite Elwes to show three new pieces, <a id=show href="https://www.aec.at/ai/en/latent-space/">Latent Space</a>, <a id=show href="https://www.aec.at/ai/en/closed-loop/">Closed Loop</a> and <a id=show href="https://www.aec.at/ai/en/machine-learning-porn/">Machine Learning Porn</a> at this years Ars Electronica Fetival in Linz, Austria.
               Jake is also going to give a talk and show <a id=show href="project-DaDaTa.html">Dadada Ta</a> with the Artist Development Agency.
 <br> "Art, technology, society. Since 1979, Ars Electronica has sought out interlinkages and congruities, causes and effects. The ideas circulating here are innovative, radical, eccentric in the best sense of that term. They influence our everyday life—our lifestyle, our way of life, every single day.<br>Once a year, Ars Electronica invites artists, scientists and researchers from all over the world to a conclave in Linz to confront a specific, interdisciplinary theme in the context of speeches, workshops, exhibitions and symposia."
             </p>
@@ -172,8 +172,19 @@ For the first time the national touring exhibition will launch at BALTIC Centre 
 					</div><!-- // .box-content -->
 				</div><!-- // .desktop-9 -->
 
-				<div class="clear"></div>
-			</div><!-- // .entry -->
+
+			<div class="desktop-4 tablet-6 columns">
+				<div class="box-content">
+<a class="twitter-timeline" data-width="100%" data-height="500" data-theme="light" data-link-color="#19CF86" href="https://twitter.com/JakeElwes">Tweets by JakeElwes</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<small>Instagram</small>
+
+			<!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/503c8527b41d5553851fe94f626ee0a6.html" scrolling="yes" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+		</div><!-- // .box-content -->
+	</div><!-- // .desktop-9 -->
+
+	<div class="clear"></div>
+</div><!-- // .entry -->
+
 
 		</div><!-- // .container -->
 	</section><!-- // section#archive -->
