--- a/project-AutoEncodedBuddha.html
+++ b/project-AutoEncodedBuddha.html
@@ -85,31 +85,15 @@
 </p>
 
 							<p>
-								Hommage to Nam June Paik’s TV Buddha
-								Collaboration with Roland Arnoldt
+								Hommage to Nam June Paik’s TV Buddha.
+								Collaboration with Roland Arnoldt. <br>
 
-								A Buddha statue watches the computer attempting to draw its own image. An artificial intelligence was trained on 5000 images of Buddha, yet the computer struggles to depict the Buddha’s essence.</p>						</div><!-- // .box-info -->
-
-					</div><!-- // .desktop-3 -->
-
-					<div class="clear"></div>
-
-					<div class="desktop-3 tablet-12 columns">
-
-						<div class="box-info">
-							<h4 class="border-top">Materials</h4>
-							<p>
-								DCGAN (Deep generative convolutional neural network) github.com/Newmu/dcgan_code. <br><br>
-
-								Custom dataset of Buddha images.<br><br>
-
-								Traditional wooden carved Buddha &amp; Digital Monitor.
-							</p>
-						</div><!-- // .box-info -->
+								A Buddha statue watches the computer attempting to draw its own image. An artificial intelligence model was trained on 5000 images of Buddha, yet the computer struggles to depict the Buddha’s essence.</p>						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
 
 					<div class="clear"></div>
+
 
 				</div><!-- // .sticky -->
 
