--- a/project-circuit.html
+++ b/project-circuit.html
@@ -81,22 +81,11 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Solid State</h3>
-							<p class="project-desc">Relief Prints - 2015
+							<p class="project-desc">2015, Relief &amp; Intaglio Prints, 30x40cm
 </p>
 <p>
 Relief &amp; Intaglio prints made directly from circuit board surfaces. The circuit boards were prepared by burning to remove components then run through a printing press. They evoke scotched terrain and media archeology.
 </p>
-						</div><!-- // .box-info -->
-
-					</div><!-- // .desktop-3 -->
-
-					<div class="desktop-3 tablet-12 columns">
-
-						<div class="box-info">
-							<h4 class="border-top">Materials</h4>
-							<p>
-								Relief &amp; Intaglio prints 30x40cm
-							</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
