--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -93,15 +93,10 @@
 					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
-							<h4 class="border-top">Materials</h4>
+							<h4 class="border-top">Technical Description</h4>
 							<p>
-								Two back-projected suspended screens.<br>
-Two artificial intelligence models: <br>
-1. A language captioning neural network writing what it sees in the images generate<br>
-2. A generative neural network generating images responding to the words generated<br>
-Two datasets to train the A.I. models (unsupervised):<br>
-1. Visual Genome dataset of 4.1 million captioned images to train a language generator network<br>
-2. Imagenet dataset of 14.2 million photographs to train the image generator network<br>
+Two artificial intelligence models: a language captioning recurrent neural network writing what it sees in the images generated, and a generative neural network generating images responding to the words generated.<br>
+Two datasets to train the A.I. models: a dataset of 4.1 million captioned images to train a language network, and the Imagenet dataset of 14.2 million photographs to train the image generator network.
 
 							</p>
 						</div><!-- // .box-info -->
@@ -134,7 +129,7 @@ Two datasets to train the A.I. models (unsupervised):<br>
 				<br></br>
 				<!-- <img src="images/project-closedLoop/1_granary_jake_elwes__043.jpg" alt="Jake Elwes digital artist" /> -->
 				<img src="images/project-closedLoop/IMG_0853.jpg" alt="Jake Elwes digital artist" />
-				<small>Installation shot of Closed Loop shown as two back projected screens, Slade Degree Show 2017</small
+				<small>Installation shot of Closed Loop shown as two back projected suspended screens, Slade Degree Show 2017</small>
 				<img src="images/project-closedLoop/IMG_0852.jpg" alt="Jake Elwes digital artist" />
 				<!-- <img src="images/project-closedLoop/IMG_0702.jpg" alt="Jake Elwes digital artist" /> -->
 
