--- a/project-digitalTouch.html
+++ b/project-digitalTouch.html
@@ -81,22 +81,10 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Digital Caress</h3>
-							<p class="project-desc">2015, Photographic Prints</p>
+							<p class="project-desc">2015, large format inkjet prints &amp; book, somerset paper, 110x60cm</p>
 
 							<p>These gestures are the residue left on the screen of an iPhone from human touch (the grease of one’s finger). The gestures and twitches were often recognisable according to the app eg. Tinder.app - swiping left and right, and Phone.app - imprint from stubble. Each image derives from a different app, displaying the material remnants of interacting with a virtual window.
 </p>
-						</div><!-- // .box-info -->
-
-					</div><!-- // .desktop-3 -->
-
-					<div class="desktop-3 tablet-12 columns">
-
-						<div class="box-info">
-							<h4 class="border-top">Materials</h4>
-							<p>
-								Large format inkjet prints on Somerset satin paper 110x60cm.
-
-							</p>
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
