--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -93,10 +93,10 @@
 					<div class="desktop-3 tablet-12 columns">
 
 						<div class="box-info">
-							<h4 class="border-top">Technical Description</h4>
+							<h4 class="border-top">Technical</h4>
 							<p>
-Two artificial intelligence models: a language captioning recurrent neural network writing what it sees in the images generated, and a generative neural network generating images responding to the words generated.<br>
-Two datasets to train the A.I. models: a dataset of 4.1 million captioned images to train a language network, and the Imagenet dataset of 14.2 million photographs to train the image generator network.
+Two neural networks: a language captioning recurrent neural network writing what it sees in the images generated, and a generative neural network generating images responding to the words generated.<br>
+Two datasets to train the algorithms: a dataset of 4.1 million captioned images to train a language network, and the Imagenet dataset of 14.2 million photographs to train the image generator network.
 
 							</p>
 						</div><!-- // .box-info -->
