--- a/project-latentSpace.html
+++ b/project-latentSpace.html
@@ -91,7 +91,7 @@
 
 							<p>
 								What happens when an A.I. algorithm that has been trained to generate humanly recognisable original images is freed to create images at will? Latent Space is a video snap-shot of a generative adversarial neural network, an A.I. algorithm trained using 14.2 million photographs, continuously producing new images – a digital subconscious conceiving of new images and visualising a ‘latent space’.
-
+								<br><br><small> Special thanks to <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their work on GANs.</small>
 
 						</div><!-- // .box-info -->
 
