--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
 
 			<div class="desktop-12 tablet-12 columns">
 				<p class="page-desc">Jake Elwes explores both Fine Art and Digital Code, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence. <br>
-					Jake is currently currently working with <a id=show href="https://www.theartistsdevelopmentagency.org">The Artist Development Agency</a>.</p>
+					Jake is currently currently working with <a id=show target="_blank" href="https://www.theartistsdevelopmentagency.org">The Artist Development Agency</a>.</p>
 
 			</div>
 		</div><!-- // .container -->
@@ -159,7 +159,7 @@
 
 						Education: <br>
 
-						<b>Slade School of Art (UCL)</b>, <a id=show href="http://www.ucl.ac.uk/slade/shows/2017/ba_bfa/elwes">BA (Hons) - Fine Art Media, 2013-17 </a><br>
+						<b>Slade School of Art (UCL)</b>, <a id=show target="_blank" href="http://www.ucl.ac.uk/slade/shows/2017/ba_bfa/elwes">BA (Hons) - Fine Art Media, 2013-17 </a><br>
 						<b>SAIC (School of the Art Institute Chicago)</b>, International Exchange - Art &amp; Technology, 2015 <br>
 						<b>Central St Martins (UAL)</b>, Foundation 2012-13 <br>
 					</p>
@@ -177,13 +177,13 @@
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Exhibitions</h4>
 							<p>
-							2017 - <a id=show href="https://www.aec.at/ai/en/"> Ars Electronica Festival: Artificial Intelligence</a>, POSTCITY Linz, Austria <br>
-							2017 - <a id=show href="https://www.mobiliar.ch/die-mobiliar/engagement/kunst-und-kultur/ausstellungen-und-fuehrungen/kunst-und-nachhaltigkeit-vol-8"> Digital/Real – How Art Surfs Between Worlds</a>, Mobiliar Headquarters, Bern, Switzerland <br>
-							2017 - <a id=show href="http://lcfi.ac.uk/news-events/events/Conference2017/">AI: Myth and Reality</a>, Leverhulme Centre for the Future of Intelligence (CFI), Cambridge <br>
-							2017 - <a id=show href="https://www.derbyquad.co.uk/exhibition/machine-made--art-robots-and-ai.aspxMachine"> Made: Art, Robotics &amp; A.I.</a>, QUAD, Derby <br>
-							2017 - <a id=show href="http://www.newcontemporaries.org.uk/artists/jake-elwes"> Bloomberg New Contemporaries</a>, Newcastle &amp; London <br>
-							2017 - <a id=show href="https://events.withgoogle.com/io-extended-2017-campus-london/"> Google I/O Extended 2017 (demo), </a>Google Campus London <br>
-							2017 - <a id=show href="http://acudmachtneu.de/events/789/ask-something/">'Ask Something' - Acud Macht Neu</a>, Transmediale and CTM Vorspiel, Berlin <br>
+							2017 - <a id=show target="_blank" href="https://www.aec.at/ai/en/"> Ars Electronica Festival: Artificial Intelligence</a>, POSTCITY Linz, Austria <br>
+							2017 - <a id=show target="_blank" href="https://www.mobiliar.ch/die-mobiliar/engagement/kunst-und-kultur/ausstellungen-und-fuehrungen/kunst-und-nachhaltigkeit-vol-8"> Digital/Real – How Art Surfs Between Worlds</a>, Mobiliar Headquarters, Bern, Switzerland <br>
+							2017 - <a id=show target="_blank" href="http://lcfi.ac.uk/news-events/events/Conference2017/">AI: Myth and Reality</a>, Leverhulme Centre for the Future of Intelligence (CFI), Cambridge <br>
+							2017 - <a id=show target="_blank" href="https://www.derbyquad.co.uk/exhibition/machine-made--art-robots-and-ai.aspxMachine"> Made: Art, Robotics &amp; A.I.</a>, QUAD, Derby <br>
+							2017 - <a id=show target="_blank" href="http://www.newcontemporaries.org.uk/artists/jake-elwes"> Bloomberg New Contemporaries</a>, Newcastle &amp; London <br>
+							2017 - <a id=show target="_blank" href="https://events.withgoogle.com/io-extended-2017-campus-london/"> Google I/O Extended 2017 (demo), </a>Google Campus London <br>
+							2017 - <a id=show target="_blank" href="http://acudmachtneu.de/events/789/ask-something/">'Ask Something' - Acud Macht Neu</a>, Transmediale and CTM Vorspiel, Berlin <br>
 							<!--2016 - 'Slade Print Fair', Slade School of Fine Art, London <br>-->
 							2016 - ‘The Neural Aesthetic’, Acud Macht Neu, Berlin <br>
 							2016 -  'Skullpture', Grant Museum, University College, London <br>
