--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -85,7 +85,7 @@
 </p>
 
 							<p>Two artificial intelligence models have an active conversation reacting to each other in a constant feedback loop - one communicating with images, the other with words.
-								<br><br><small> Special thanks to <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their work on GANs.</small>
+								<br><br><small> Collaborative project with <a id=show target="_blank" href="http://ouiouioui.space/">Roland Arnoldt</a>. Special thanks to <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their work on GANs.</small>
 
 </p>
 						</div><!-- // .box-info -->
