--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Exhibitions</h4>
 							<p>
-							2017 - <a id=show target="_blank" href="https://www.aec.at/ai/en/"> Ars Electronica Festival: Artificial Intelligence</a>, POSTCITY Linz, Austria <br>
+							2017 - A.I. Projects Exhibition, Artificial Intimacy Exhibition &amp; TADA Gallery Space,<a id=show target="_blank" href="https://www.aec.at/ai/en/"> Ars Electronica Festival: Artificial Intelligence</a>, POSTCITY Linz, Austria <br>
 							2017 - <a id=show target="_blank" href="https://www.mobiliar.ch/die-mobiliar/engagement/kunst-und-kultur/ausstellungen-und-fuehrungen/kunst-und-nachhaltigkeit-vol-8"> Digital/Real – How Art Surfs Between Worlds</a>, Mobiliar Headquarters, Bern, Switzerland <br>
 							2017 - <a id=show target="_blank" href="http://lcfi.ac.uk/news-events/events/Conference2017/">AI: Myth and Reality</a>, Leverhulme Centre for the Future of Intelligence (CFI), Cambridge <br>
 							2017 - <a id=show target="_blank" href="https://www.derbyquad.co.uk/exhibition/machine-made--art-robots-and-ai.aspxMachine"> Made: Art, Robotics &amp; A.I.</a>, QUAD, Derby <br>
@@ -227,15 +227,18 @@
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-9 tablet-6 columns">
-							<h4>Talks / Workshops</h4>
-							<p>2017 - Ars Electronica, Austria<br>
-								2017 - London Creative Coding, UK<br>
-								2016 - University College London, UK<br><br>
+							<h4>Talks / Workshops</h4> <br>
+							&#9716; Lecture, Machine Learning, Art and Architecture - C H O R A conscious city, Institute for Architecture, Technische Universität Berlin. October 2017 <br>
+							&#9717; Latent Spaces, Dirty Datasets &amp; Autonomous Art - Art &amp; Technology: Vienna, September 2017 <br>
+							&#9718; Ars Electronica, AI Project Spaces: Artist Workshops - Postcity, Linz, Austria, September 2017 <br>
+							&#9719; Machine Learning &amp; Art - London Creative Coding, March 2017 - <a id=show target="_blank" href="https://www.youtube.com/embed/acjDB1kodms">Youtube Video </a>&amp;<a id=show target="_blank" href="ldncc2017.pdf"> Slides PDF</a> <br>
+							&#9716; Creative applications of Artificial Intelligence - UCL, December 2016 <br>
+
 									</p>
-							<iframe id="vid" width="100%" height="100%" src="https://www.youtube.com/embed/acjDB1kodms" frameborder="0" allowfullscreen></iframe>
+							<!-- <iframe id="vid" width="100%" height="100%" src="https://www.youtube.com/embed/acjDB1kodms" frameborder="0" allowfullscreen></iframe> -->
 
 											<!-- <img src="images/project-digitalTouch/Book.pdf" alt="Jake Elwes digital artist" /> -->
-							<a href="ldncc2017.pdf">Slides PDF</a>
+							<!-- <a href="ldncc2017.pdf">Slides PDF</a> -->
 											<!-- <embed id="pdf" src="ldncc2017.pdf" width="100%" height="150px" type='application/pdf'> -->
 
 												<script>
