--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-9 tablet-6 columns">
-							<h4>Exhibitions</h4>
+							<h4>Group Shows</h4>
 							<p>
 							2017 - A.I. Projects Exhibition, Artificial Intimacy Exhibition &amp; TADA Gallery Space,<a id=show target="_blank" href="https://www.aec.at/ai/en/"> Ars Electronica Festival: Artificial Intelligence</a>, POSTCITY Linz, Austria <br>
 							2017 - <a id=show target="_blank" href="https://www.mobiliar.ch/die-mobiliar/engagement/kunst-und-kultur/ausstellungen-und-fuehrungen/kunst-und-nachhaltigkeit-vol-8"> Digital/Real – How Art Surfs Between Worlds</a>, Mobiliar Headquarters, Bern, Switzerland <br>
