--- a/about.html
+++ b/about.html
@@ -177,9 +177,9 @@
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Group Shows</h4>
 							<p>
-							2017 - A.I. Projects Exhibition, Artificial Intimacy Exhibition &amp; TADA Gallery Space,<a id=show target="_blank" href="https://www.aec.at/ai/en/"> Ars Electronica Festival: Artificial Intelligence</a>, POSTCITY Linz, Austria <br>
+							2017 - Ars Electronica,<a id=show target="_blank" href="https://www.aec.at/ai/en/media-art-between-natural-and-artificial-intelligence/"> A.I. Projects Exhibition</a>, <a id=show target="_blank" href="https://www.aec.at/ai/en/artificial-intimacy/">Artificial Intimacy Exhibition</a> &amp; <a id=show target="_blank" href="https://www.aec.at/ai/en/ars-electronica-gallery-spaces/">TADA Gallery Space</a>,<a id=show target="_blank" href="https://www.aec.at/ai/en/"> Ars Electronica Festival: Artificial Intelligence</a>, POSTCITY Linz, Austria <br>
 							2017 - <a id=show target="_blank" href="https://www.mobiliar.ch/die-mobiliar/engagement/kunst-und-kultur/ausstellungen-und-fuehrungen/kunst-und-nachhaltigkeit-vol-8"> Digital/Real – How Art Surfs Between Worlds</a>, Mobiliar Headquarters, Bern, Switzerland <br>
-							2017 - <a id=show target="_blank" href="http://lcfi.ac.uk/news-events/events/Conference2017/">AI: Myth and Reality</a>, Leverhulme Centre for the Future of Intelligence (CFI), Cambridge <br>
+							2017 - <a id=show target="_blank" href="https://www.artrabbit.com/events/machine-fictions">AI: Myth and Reality</a>, <a id=show target="_blank" href="http://lcfi.ac.uk/news-events/events/Conference2017/">Leverhulme Centre for the Future of Intelligence (CFI)</a>, Cambridge <br>
 							2017 - <a id=show target="_blank" href="https://www.derbyquad.co.uk/exhibition/machine-made--art-robots-and-ai.aspxMachine"> Made: Art, Robotics &amp; A.I.</a>, QUAD, Derby <br>
 							2017 - <a id=show target="_blank" href="http://www.newcontemporaries.org.uk/artists/jake-elwes"> Bloomberg New Contemporaries</a>, Newcastle &amp; London <br>
 							2017 - <a id=show target="_blank" href="https://events.withgoogle.com/io-extended-2017-campus-london/"> Google I/O Extended 2017 (demo), </a>Google Campus London <br>
@@ -191,6 +191,13 @@
 							2015 - ‘!!THIS TIM3 ITS R3AL!!’, Elastic Arts, Chicago <br>
 							2014 -  'Ben's Show', abandoned warehouse, Camden, London <br>
 							<!--2014 - 'Public Show', Slade School of Fine Art Research Center, London <br>-->
+
+							<!-- Other links
+							https://www.artrabbit.com/events/machine-fictions
+
+							https://futurezone.at/digital-life/porno-bilder-aus-der-maschine-zeigen-sexuelle-fantasien/286.010.267
+						-->
+
 						</p>
 
 									</div><!-- // .desktop-6 -->
