--- a/news.html
+++ b/news.html
@@ -155,13 +155,17 @@
             </blockquote>
 
             <p> Jake has been selected to show work at this years <a id=show href="http://www.newcontemporaries.org.uk/artists/jake-elwes">New Contempories</a>. "New Contemporaries is the leading organisation supporting emergent art practice from UK art schools. Since 1949 New Contemporaries has consistently provided a critical platform for new and recent fine art graduates primarily by means of an annual, nationally touring exhibition.<br>
-              Showcasing new and recent fine art graduates since 1949, the roster of alumni encompasses significant post-war figures such as Frank Auerbach and Paula Rego; pop artists including Patrick Caulfield and David Hockney; decade-defining YBAs Damien Hirst and Gillian Wearing; alongside other significant contemporary figures such as Tacita Dean, Mark Lecky, Mona Hatoum, Mike Nelson, Chris Ofili and Rebecca Warren. More recently Ed Atkins, Marvin Gaye Chetwynd, Rachel Maclean and Laure Prouvost have all been selected.<br>
+              Showcasing new and recent fine art graduates since 1949, the roster of alumni encompasses artists such as Frank Auerbach, Paula Rego, David Hockney, Damien Hirst, Tacita Dean, Mark Lecky, Ed Atkins, Marvin Gaye Chetwynd and Rachel Maclean have all been selected.<br>
 For the first time the national touring exhibition will launch at BALTIC Centre for Contemporary Art, Gateshead and BALTIC’s project space at BALTIC 39, Newcastle upon Tyne from 29 September to 26 November 2017. The exhibition will then travel to Block 336, London, from 27 January to 3 March 2018." - <a id=show href="http://www.newcontemporaries.org.uk/">newcontempories.com</a></p>
 
 						<blockquote>
 							<p class="quote">Ars Electronica Festival</p>
 							<footer>September 2017</footer>
 						</blockquote>
+						<img src="images/news/Ars1.jpg" width="48%" alt="Jake Elwes digital artist" />
+						<img src="images/news/Ars2.jpg" width="48%" alt="Jake Elwes digital artist" />
+						<img src="images/news/Ars3.jpg" width="48%" alt="Jake Elwes digital artist" />
+						<img src="images/news/Ars4.jpg" width="48%" alt="Jake Elwes digital artist" />
 
 						<p> <a id=show href="https://www.aec.at/festival/en/"> Ars Electronica</a>'s theme for 2017 in Artificial Intelligence has invite Elwes to show three new pieces, <a id=show href="https://www.aec.at/ai/en/latent-space/">Latent Space</a>, <a id=show href="https://www.aec.at/ai/en/closed-loop/">Closed Loop</a> and <a id=show href="https://www.aec.at/ai/en/machine-learning-porn/">Machine Learning Porn</a> at this years Ars Electronica Fetival in Linz, Austria.
               Jake is also going to give a talk and show <a id=show href="project-DaDaTa.html">Dadada Ta</a> with the Artist Development Agency.
