--- a/project-latentSpace.html
+++ b/project-latentSpace.html
@@ -134,10 +134,11 @@
 					<!-- <img src="images/project-latentSpace/tsne2.jpg" alt="Jake Elwes digital artist" /> -->
 					<!-- <img src="images/project-latentSpace/tsne3.jpg" alt="Jake Elwes digital artist" /> -->
 					<img src="images/project-latentSpace/Latent Install.jpg" alt="Jake Elwes digital artist" />
+					<!-- <small> Installation shot from Slade Degree Show, 2017</small> -->
 					<!-- <img src="images/project-latentSpace/Latent Install2.jpg" alt="Jake Elwes digital artist" /> -->
 					<iframe id="vid2" width="100%" height="360" src="https://www.youtube.com/embed/uIBBIKRAwl4" frameborder="0" allowfullscreen></iframe>
 					<br>
-					<a id="show" href="www.gregory-white.co.uk">Gregory White</a> Modular Synth Performance - <a id="show" href="gregwht.bandcamp.com">Bandcamp,</a> Slade (UCL) May 2017
+					<small><a id="show" href="www.gregory-white.co.uk">Gregory White</a> Modular Synth Performance - <a id="show" href="gregwht.bandcamp.com">Bandcamp,</a> Slade (UCL) May 2017</small>
 					<br>
 					<br>
 
