--- a/news.html
+++ b/news.html
@@ -166,6 +166,7 @@ For the first time the national touring exhibition will launch at BALTIC Centre 
 						<img src="images/news/Ars2.jpg" width="48%" alt="Jake Elwes digital artist" />
 						<img src="images/news/Ars3.jpg" width="48%" alt="Jake Elwes digital artist" />
 						<img src="images/news/Ars4.jpg" width="48%" alt="Jake Elwes digital artist" />
+						<small>Image credits: Ars Electronica, Tom Mesic &amp; Florian Voggeneder</small>
 
 						<p> <a id=show href="https://www.aec.at/festival/en/"> Ars Electronica</a>'s theme for 2017 in Artificial Intelligence has invite Elwes to show three new pieces, <a id=show href="https://www.aec.at/ai/en/latent-space/">Latent Space</a>, <a id=show href="https://www.aec.at/ai/en/closed-loop/">Closed Loop</a> and <a id=show href="https://www.aec.at/ai/en/machine-learning-porn/">Machine Learning Porn</a> at this years Ars Electronica Fetival in Linz, Austria.
               Jake is also going to give a talk and show <a id=show href="project-DaDaTa.html">Dadada Ta</a> with the Artist Development Agency.
