--- a/news.html
+++ b/news.html
@@ -150,7 +150,7 @@
             </p> -->
 
             <blockquote>
-              <p class="quote">Bloomburg New Contemporaries</p>
+              <p class="quote">Bloomberg New Contemporaries</p>
               <footer>September 2017 - March 2018</footer>
             </blockquote>
 
