--- a/project-DaDaTa.html
+++ b/project-DaDaTa.html
@@ -84,7 +84,7 @@
 							<p class="project-desc">2016, Digital Video, 20 minute loop
 </p>
 
-							<p>Extracted numbers from over 50 hours of interviews with global tech company executives. They speak in the reductive &amp; apparently objective language of numbers, which denotes code, money, big data and free market ideology, as well as relating to singularity and the public’s lack of knowledge of how digital platforms work.
+							<p>In DaDaDa Ta over 50 hours of interviews have been sourced from YouTube then processed using the IBM Watson AI speech to text programme to transcribe the interviews and a custom-made computer programme to extract in time order the instances of the participants speaking in numbers and then remove the words from the source videos – leaving the interview’s chronology intact yet reduced to a stream of numbers: <br> “One, one billion, one million, one hundred million, two billion, one, two hundred, ten thousand, eighteen thousand, two, two, two, ten, fifteen, nine thousand.” Elon Musk.
 </p>
 						</div><!-- // .box-info -->
 
@@ -115,7 +115,7 @@
 				</script>
 
 				<br></br>
-				<small>Interviews with: Mark Zuckerberg - CEO: Facebook, Jeff Benzos - CEO: Amazon, Brian Chesky - CEO: Airbnb, Larry Page &amp; Sergey Brin - Founders: Google, Peter Thiel - Founder: PayPal Palantir &amp; Marc Andreessen - Founder: Netscape, Steve Jobs - Founder: Apple Pixar, Nick Woodman - Founder: GoPro, Jack Dorsey - CEO: Twitter, James Park - CEO: Fitbit, Tim Cook - CEO: Apple, Reid Hoffman - Founder: LinkedIn, Stewart Butterfield - Founder: Flickr Slack, Drew Houston - Founder: Dropbox, Jack Ma - Founder: Alibaba Group, Jimmy Wales - CEO: Wikipedia, Niklas Zennström - Founder: Skype, Sean Rad - Founder: Tinder, Travis Kalanick - Founder: Uber, Satya Nadella - CEO: Microsoft, Elon Musk - Founder: SpaceX: Tesla &amp; Paypal, Bill Gates - Founder: Microsoft, Devin Wenig - Founder: eBay, Kevin Systrom - Founder: Instagram, Paul Eremenko - CEO: Airbus Group, Reid Hoffman - Founder: LinkedIn, Aaron Levie - Founder: Box, Jonathan Ive - CDO: Apple, Dustin Moskovitz -  Co-Founder: Facebook, Ben Silbermann - CEO: Pinterest, Reed Hastings - Founder: Netflix, Evan Spiegel - Founder: Snapchat, Daniel Ek - Founder: Spotify.
+				<small>Leading figures in the global tech industry speaking in numbers – in order: <br> Mark Zuckerberg - CEO: Facebook, Jeff Benzos - CEO: Amazon, Brian Chesky - CEO: Airbnb, Larry Page &amp; Sergey Brin - Founders: Google, Peter Thiel - Founder: PayPal Palantir &amp; Marc Andreessen - Founder: Netscape, Steve Jobs - Founder: Apple Pixar, Nick Woodman - Founder: GoPro, Jack Dorsey - CEO: Twitter, James Park - CEO: Fitbit, Tim Cook - CEO: Apple, Reid Hoffman - Founder: LinkedIn, Stewart Butterfield - Founder: Flickr Slack, Drew Houston - Founder: Dropbox, Jack Ma - Founder: Alibaba Group, Jimmy Wales - CEO: Wikipedia, Niklas Zennström - Founder: Skype, Sean Rad - Founder: Tinder, Travis Kalanick - Founder: Uber, Satya Nadella - CEO: Microsoft, Elon Musk - Founder: SpaceX: Tesla &amp; Paypal, Bill Gates - Founder: Microsoft, Devin Wenig - Founder: eBay, Kevin Systrom - Founder: Instagram, Paul Eremenko - CEO: Airbus Group, Reid Hoffman - Founder: LinkedIn, Aaron Levie - Founder: Box, Jonathan Ive - CDO: Apple, Dustin Moskovitz -  Co-Founder: Facebook, Ben Silbermann - CEO: Pinterest, Reed Hastings - Founder: Netflix, Evan Spiegel - Founder: Snapchat, Daniel Ek - Founder: Spotify.
 </small>
 
 			</div><!-- // .desktop-9 -->
