--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -84,7 +84,8 @@
 							<p class="project-desc">2017, 2-channel digital video, 200 minute loop
 </p>
 
-							<p>Two artificial intelligence models have an active conversation reacting to each other in a constant feedback loop - one communicating with images, the other with words.
+							<p>
+In Closed Loop two artificial intelligence models converse with each other - one with words the other with images - in a never-ending feedback loop. The words of one describe the images of the other, which then seeks to describe the words with a fresh image… Two neural networks getting lost in their own nuances, sparking and branching off each other as they converse in a perpetual game of AI Chinese whispers.
 								<br><br><small> Collaborative project with <a id=show target="_blank" href="http://ouiouioui.space/">Roland Arnoldt</a>. Special thanks to <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their work on GANs.</small>
 
 </p>
