--- a/about.html
+++ b/about.html
@@ -276,7 +276,7 @@
 
 							‘Java Programming’, London City University 2014<br>
 							‘Creative Applications of Deep Learning with TensorFlow’, Kadenze 2016<br>
-							‘Machine Learning’ (Stanford University), Coursera 2016<br>
+							<!-- ‘Machine Learning’ (Stanford University), Coursera 2016<br> -->
 						</p>
 						</div><!-- // .desktop-6 -->
 
