--- a/news.html
+++ b/news.html
@@ -152,7 +152,13 @@
             <blockquote>
               <p class="quote">Bloomberg New Contemporaries</p>
               <footer>September 2017 - March 2018</footer>
-            </blockquote>
+						</blockquote>
+						<img src="images/news/BNC1.jpg" width="48%" alt="Jake Elwes digital artist" />
+						<img src="images/news/BNC2.jpg" width="48%" alt="Jake Elwes digital artist" />
+						<img src="images/news/BNC3.jpg" width="31.5%" alt="Jake Elwes digital artist" />
+						<img src="images/news/BNC4.jpg" width="31.5%" alt="Jake Elwes digital artist" />
+						<img src="images/news/BNC5.jpg" width="31.5%" alt="Jake Elwes digital artist" />
+
 
             <p> Jake has been selected to show work at this years <a id=show href="http://www.newcontemporaries.org.uk/artists/jake-elwes">New Contempories</a>. "New Contemporaries is the leading organisation supporting emergent art practice from UK art schools. Since 1949 New Contemporaries has consistently provided a critical platform for new and recent fine art graduates primarily by means of an annual, nationally touring exhibition.<br>
               Showcasing new and recent fine art graduates since 1949, the roster of alumni encompasses artists such as Frank Auerbach, Paula Rego, David Hockney, Damien Hirst, Tacita Dean, Mark Lecky, Ed Atkins, Marvin Gaye Chetwynd and Rachel Maclean have all been selected.<br>
