--- a/about.html
+++ b/about.html
@@ -137,8 +137,8 @@
 
 
 			<div class="desktop-12 tablet-12 columns">
-				<p class="page-desc">Jake Elwes explores both Fine Art and Digital Code, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence. <br>
-					Jake is currently currently working with <a id=show target="_blank" href="https://www.theartistsdevelopmentagency.org">The Artist Development Agency</a>.</p>
+				<p>Jake Elwes explores both Fine Art and Digital Code, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence.
+					Jake is currently currently working with Steve Fletcher at <a id=show target="_blank" href="https://www.theartistsdevelopmentagency.org">The Artist Development Agency</a>, and showing in <a id=show target="_blank" href="http://www.newcontemporaries.org.uk/artists/jake-elwes"> Bloomberg New Contemporaries 2017.</a></p>
 
 			</div>
 		</div><!-- // .container -->
@@ -155,7 +155,7 @@
 					<div class="desktop-9 tablet-6 columns">
 						<h4>Background</h4>
 						<p>
-						Born 1993, London UK.  <br> <br>
+						Born 1993, London UK.  <br><br>
 
 						Education: <br>
 
@@ -177,11 +177,12 @@
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Group Shows</h4>
 							<p>
+							2017 - <a id=show target="_blank" href="http://www.newcontemporaries.org.uk/artists/jake-elwes"> Bloomberg New Contemporaries</a>, Newcastle &amp; London <br>
+							2017 - >when machines are dreaming<, Chaos Computer Club (CCC) Datenspuren, Technische Sammlungen, Dresden <br>
 							2017 - Ars Electronica,<a id=show target="_blank" href="https://www.aec.at/ai/en/media-art-between-natural-and-artificial-intelligence/"> A.I. Projects Exhibition</a>, <a id=show target="_blank" href="https://www.aec.at/ai/en/artificial-intimacy/">Artificial Intimacy Exhibition</a> &amp; <a id=show target="_blank" href="https://www.aec.at/ai/en/ars-electronica-gallery-spaces/">TADA Gallery Space</a>,<a id=show target="_blank" href="https://www.aec.at/ai/en/"> Ars Electronica Festival: Artificial Intelligence</a>, POSTCITY Linz, Austria <br>
 							2017 - <a id=show target="_blank" href="https://www.mobiliar.ch/die-mobiliar/engagement/kunst-und-kultur/ausstellungen-und-fuehrungen/kunst-und-nachhaltigkeit-vol-8"> Digital/Real – How Art Surfs Between Worlds</a>, Mobiliar Headquarters, Bern, Switzerland <br>
 							2017 - <a id=show target="_blank" href="https://www.artrabbit.com/events/machine-fictions">AI: Myth and Reality</a>, <a id=show target="_blank" href="http://lcfi.ac.uk/news-events/events/Conference2017/">Leverhulme Centre for the Future of Intelligence (CFI)</a>, Cambridge <br>
 							2017 - <a id=show target="_blank" href="https://www.derbyquad.co.uk/exhibition/machine-made--art-robots-and-ai.aspxMachine"> Made: Art, Robotics &amp; A.I.</a>, QUAD, Derby <br>
-							2017 - <a id=show target="_blank" href="http://www.newcontemporaries.org.uk/artists/jake-elwes"> Bloomberg New Contemporaries</a>, Newcastle &amp; London <br>
 							2017 - <a id=show target="_blank" href="https://events.withgoogle.com/io-extended-2017-campus-london/"> Google I/O Extended 2017 (demo), </a>Google Campus London <br>
 							2017 - <a id=show target="_blank" href="http://acudmachtneu.de/events/789/ask-something/">'Ask Something' - Acud Macht Neu</a>, Transmediale and CTM Vorspiel, Berlin <br>
 							<!--2016 - 'Slade Print Fair', Slade School of Fine Art, London <br>-->
@@ -235,7 +236,7 @@
 
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Talks / Workshops</h4> <br>
-							&#9716; Lecture, Machine Learning, Art and Architecture - C H O R A conscious city, Institute for Architecture, Technische Universität Berlin. October 2017 <br>
+							&#9716; Machine Learning, Art and Architecture - C H O R A conscious city, Institute for Architecture, Technische Universität Berlin. October 2017 <br>
 							&#9717; Latent Spaces, Dirty Datasets &amp; Autonomous Art - Art &amp; Technology: Vienna, September 2017 <br>
 							&#9718; Ars Electronica, AI Project Spaces: Artist Workshops - Postcity, Linz, Austria, September 2017 <br>
 							&#9719; Machine Learning &amp; Art - London Creative Coding, March 2017 - <a id=show target="_blank" href="https://www.youtube.com/embed/acjDB1kodms">Youtube Video </a>&amp;<a id=show target="_blank" href="ldncc2017.pdf"> Slides PDF</a> <br>
