--- a/about.html
+++ b/about.html
@@ -177,6 +177,7 @@
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Group Shows</h4>
 							<p>
+							2017 - Stars od A.I., Life 3.0 with Max Tegmark, Turing Lecture Theatre, Institute of Technology &amp; Engineering, London<br>
 							2017 - <a id=show target="_blank" href="http://www.newcontemporaries.org.uk/artists/jake-elwes"> Bloomberg New Contemporaries</a>, Newcastle &amp; London <br>
 							2017 - >when machines are dreaming<, Chaos Computer Club (CCC) Datenspuren, Technische Sammlungen, Dresden <br>
 							2017 - Ars Electronica,<a id=show target="_blank" href="https://www.aec.at/ai/en/media-art-between-natural-and-artificial-intelligence/"> A.I. Projects Exhibition</a>, <a id=show target="_blank" href="https://www.aec.at/ai/en/artificial-intimacy/">Artificial Intimacy Exhibition</a> &amp; <a id=show target="_blank" href="https://www.aec.at/ai/en/ars-electronica-gallery-spaces/">TADA Gallery Space</a>,<a id=show target="_blank" href="https://www.aec.at/ai/en/"> Ars Electronica Festival: Artificial Intelligence</a>, POSTCITY Linz, Austria <br>
