--- a/about.html
+++ b/about.html
@@ -237,9 +237,9 @@
 
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Talks / Workshops</h4> <br>
-							&#9716; Machine Learning, Art and Architecture - C H O R A conscious city, Institute for Architecture, Technische Universität Berlin. October 2017 <br>
-							&#9717; Latent Spaces, Dirty Datasets &amp; Autonomous Art - Art &amp; Technology: Vienna, September 2017 <br>
-							&#9718; Ars Electronica, AI Project Spaces: Artist Workshops - Postcity, Linz, Austria, September 2017 <br>
+							&#9716; Machine Learning, Art and Architecture - (workshop/talk for 80 students), <a id=show target="_blank" href="http://www.chora.tu-berlin.de/">CHORA conscious city</a>, Institute for Architecture, <b>Technische Universität Berlin</b>. October 2017 <br>
+							&#9717; Latent Spaces, Dirty Datasets &amp; Autonomous Art - <b>Art &amp; Technology: Vienna</b>, September 2017 <br>
+							&#9718; <b>Ars Electronica</b>, AI Project Spaces: Artist Workshops - Postcity, Linz, Austria, September 2017 <br>
 							&#9719; Machine Learning &amp; Art - London Creative Coding, March 2017 - <a id=show target="_blank" href="https://www.youtube.com/embed/acjDB1kodms">Youtube Video </a>&amp;<a id=show target="_blank" href="ldncc2017.pdf"> Slides PDF</a> <br>
 							&#9716; Creative applications of Artificial Intelligence - UCL, December 2016 <br>
 
