--- a/about.html
+++ b/about.html
@@ -133,11 +133,10 @@
 
 			<!-- <div class="desktop-12 columns"><div class="border-top"></div></div> -->
 
-			<div class="clear"></div>
 
 
-			<div class="desktop-12 tablet-12 columns">
-				<p>Jake Elwes explores both Fine Art and Digital Code, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence.
+			<div class="desktop-12 tablet-12 columns" >
+				<p style="margin-top:0px;">Jake Elwes explores both Fine Art and Digital Code, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence.
 					Jake is currently currently working with Steve Fletcher at <a id=show target="_blank" href="https://www.theartistsdevelopmentagency.org">The Artist Development Agency</a>, and showing in <a id=show target="_blank" href="http://www.newcontemporaries.org.uk/artists/jake-elwes"> Bloomberg New Contemporaries 2017.</a></p>
 
 			</div>
@@ -237,7 +236,7 @@
 
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Talks / Workshops</h4> <br>
-							&#9716; Machine Learning, Art and Architecture - (workshop/talk for 80 students), <a id=show target="_blank" href="http://www.chora.tu-berlin.de/">CHORA conscious city</a>, Institute for Architecture, <b>Technische Universität Berlin</b>. October 2017 <br>
+							&#9716; AI, Computer Vision for Art, Architecture &amp; as a Creative Tool - (workshop/talk for 80 students), <a id=show target="_blank" href="http://www.chora.tu-berlin.de/">CHORA conscious city</a>, Institute for Architecture, <b>Technische Universität Berlin</b>. October 2017 <br>
 							&#9717; Latent Spaces, Dirty Datasets &amp; Autonomous Art - <b>Art &amp; Technology: Vienna</b>, September 2017 <br>
 							&#9718; <b>Ars Electronica</b>, AI Project Spaces: Artist Workshops - Postcity, Linz, Austria, September 2017 <br>
 							&#9719; Machine Learning &amp; Art - London Creative Coding, March 2017 - <a id=show target="_blank" href="https://www.youtube.com/embed/acjDB1kodms">Youtube Video </a>&amp;<a id=show target="_blank" href="ldncc2017.pdf"> Slides PDF</a> <br>
