--- a/news.html
+++ b/news.html
@@ -138,7 +138,7 @@
 
 
 				<div class="desktop-8 tablet-6 columns">
-					<div class="box-content">
+					<div class="box-content" style="padding-top:0px;">
 
             <!-- <blockquote>
               <p class="quote">The Artist Devlopment Agency</p>
@@ -150,7 +150,7 @@
             </p> -->
 
             <blockquote>
-              <p class="quote">Bloomberg New Contemporaries</p>
+              <p class="quote" style="margin-top:0px;">Bloomberg New Contemporaries</p>
               <footer>September 2017 - March 2018</footer>
 						</blockquote>
 						<img src="images/news/BNC1.jpg" width="48%" alt="Jake Elwes digital artist" />
