--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Jake Elwes - Iris0x0a2e-Retina</title>
+	<title>Jake Elwes - Closed Loop</title>
 	<meta name="description" content=".">
 	<meta name="author" content="Jake Elwes">
 
